--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	<h2>Remuniration Bill</h2>
 	<form action="addcsv.php" method="post">
 		<div>
-			<label for="facultyname">Name of the faculty </label><input type="text" name="facultyname" id="faculty" >
+			<label for="facultyname">Name of the faculty </label><input type="text" name="facultyname" id="faculty" required>
 		</div>
 		<div>
 			<label>Designation</label>
-			<select id="designation" name="designation">
-                <option>select</option>
+			<select id="designation" name="designation" required>
+                <option value="" selected disabled hidden>select</option>
 				<option value="asc">associate professor</option>
 				<option value="pro">professor</option>
 				<option value="assist">assistant professor</option>
@@ -48,8 +48,8 @@
 		</div>
 		<div>
 			<label for="college">Name of the college </label>
-			<select id="college" name="college">
-                <option>select</option>
+			<select id="college" name="college" required>
+                <option value="" selected disabled hidden>select</option>
 				<option value="prag">Pragathi Eng. college</option>
 				<option value="bvc">BVC Eng. college</option>
 				<option value="vishnu">Vishnu Eng. college</option>
@@ -59,33 +59,33 @@
 		</div>
 		<div>
 			<label>Purpose</label>
-			<select for="purpose" id="purpose" name="purpose">
-                <option>select</option>
+			<select for="purpose" id="purpose" name="purpose" required>
+                <option value="" selected disabled hidden>select</option>
 				<option value="paper">Paper valuation</option>
 				<option value="lab">Lab External</option>
 				<option value="viva">Project viva</option>
 			</select>
 		</div>
 		<div>
-			<label for="telephone">Telephone</label><input type="phone" name="telephone" id="phone" >
+			<label for="telephone">Telephone</label><input required type="phone" name="telephone" id="phone" >
 		</div>
 		<div>
-			<label for="DateofDuty">Date of Duty</label><input type="date" name="DateofDuty" id="duty" >
+			<label for="DateofDuty">Date of Duty</label><input required type="date" name="DateofDuty" id="duty" >
 		</div>
 		<div>
-			<label for="DateofRelieving">Date of Relieving</label><input type="date" name="DateofRelieving" id="relieving" >
+			<label for="DateofRelieving">Date of Relieving</label><input required type="date" name="DateofRelieving" id="relieving" >
 		</div>
 		<div>
-			<label for="nostudents">Number of Students</label><input type="number" name="nostudents" id="nostudents" >
+			<label for="nostudents">Number of Students</label><input required type="number" name="nostudents" id="nostudents" >
 		</div>
 		<div>
-			<label for="bankacc">Bank Account</label><input type="number" name="bankacc" id="bankacc" >
+			<label for="bankacc">Bank Account</label><input required type="number" name="bankacc" id="bankacc" >
 		</div>
 		<div>
-			<label for="ifsc">IFSC code</label><input type="text" name="ifsc" id="ifsc" >
+			<label for="ifsc">IFSC code</label><input required type="text" name="ifsc" id="ifsc" >
 		</div>
 		<div>
-			<input type="button" name="button" value="Amount Details" onclick="getdetails()">
+			<input type="button" name="button" value="Amount Details" onclick="getdetails()" style="margin-right: 30px;">
 			<input type="submit" name="submit" value="submit" >
 		</div>
 	</form>
@@ -94,5 +94,5 @@
 	</div>
 </center>
 </body>
-<!-- <script type="text/javascript" src="main.js"></script> -->
+<script type="text/javascript" src="main.js"></script>
 </html>
